<?xml version="1.0"?>
<package>
  <name>apriltags</name>
  <version>0.0.3</version>
  <description>A catkin version of the C++ apriltags library</description>
  <url>http://wiki.ros.org/apriltags</url>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>
  <author>Mitchell Wills</author>

  <license>LGPL</license>

  <url type="website">http://wiki.ros.org/apriltags</url>
  <url type="bugtracker">https://github.com/RIVeR-Lab/apriltags_ros/issues</url>
  <url type="repository">https://github.com/RIVeR-Lab/apriltags_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>libv4l-dev</build_depend>
  <run_depend>eigen</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>libv4l-dev</run_depend>


  <export>
  </export>
</package>
